@@ -5,7 +5,7 @@ use strict;
 use warnings;
 use Padre::Document ();
 use Padre::Util     ();
-use Padre::Debug;
+use Padre::Logger;
 
 our $VERSION = '0.52';
 
