@@ -7,7 +7,7 @@ use 5.008;
 use strict;
 use warnings;
 use Padre::Wx ();
-use Padre::Debug;
+use Padre::Logger;
 
 our $VERSION = '0.52';
 
